variable and constant

--- a/02. Start Coding/note.html
+++ b/02. Start Coding/note.html
@@ -59,9 +59,30 @@
                 document.getElementById("output").innerHTML = "Hello, World!";
             </code>
 
-            <p>Use <code>script</code> tag for writng javacript code in html</p>
-            
+            <p class="mb-0">Use <code>script</code> tag for writng javacript code in html</p>
+            <p>Also you can use externel file write javacript code with script link</p>
+            <img class="img-fluid col-md-6" src="img/img-01.png" alt="">
 
+            <h4 class="fs-4 mt-4">JavaScript Ouput</h4>
+            <p>In computer programming, a comment is a programmer-readable explanation or annotation in the source code of a computer program. They are added with the purpose of making the source code easier for humans to understand, and are generally ignored by compilers and interpreters.[1][2] The syntax of comments in various programming languages varies considerably.</p>
+            <code>//Single Line Comment</code>
+            <p></p>
+            <code>/*
+                    Mutiline <br>comment
+                */</code>
+            
+            <h4 class="fs-4 mt-4">JavaScript User Input</h4>
+            <p class="mb-0">We can use prompt function for javacript user input</p>
+            <code>
+                var x;<br>
+                x = prompt("Enter your name: ");<br>
+                console.log(x);<br>
+            </code>
+
+            <p class="m-0"><b>Output</b></p>
+            <code>Aktaruzzaman</code>
+            <p><b>Example:</b></p>
+            <img src="img/img-2.png" class="img-fluid col-md-6" alt="">
         </div>
 
 
