--- a/22. ES6/index.html
+++ b/22. ES6/index.html
@@ -21,9 +21,14 @@
 
 <body>
 
-    <div class="container not_found"></div>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/objectdestructing.js"></script>
+    <script src="js/symbol_op.js"></script>
+    <!-- <script src="js/rest_operator.js"></script> -->
+    <!-- <script src="js/spread_operator.js"></script> -->
+    <!-- <script src="js/objectdestructing.js"></script> -->
     <!-- <script src="js/arraydestructing.js"></script> -->
     <!-- <script src="js/templeteLiteral.js"></script> -->
     <!-- <script src="js/arrowFunction.js"></script> -->
