--- a/22. ES6/index.html
+++ b/22. ES6/index.html
@@ -25,7 +25,10 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/symbol_op.js"></script>
+    <script src="js/map.js"></script>
+    <!-- <script src="js/set.js"></script> -->
+    <!-- <script src="js/promise.js"></script> -->
+    <!-- <script src="js/symbol_op.js"></script> -->
     <!-- <script src="js/rest_operator.js"></script> -->
     <!-- <script src="js/spread_operator.js"></script> -->
     <!-- <script src="js/objectdestructing.js"></script> -->
