Number Guesser App

--- a/24. Project(Shooping Cart)/index.html
+++ b/24. Project(Shooping Cart)/index.html
@@ -43,13 +43,13 @@
 
         }
 
-        .sucess, .error{
+        .success, .error{
             color: white;
             padding: 5px;
             margin: 5px 0px 15px 0px;
         }
 
-        .sucess{
+        .success{
             background: green;
         }
 
@@ -81,7 +81,9 @@
             </div>
         </div>
     </div>
-
+    <div class="container">
+        <p class="m-0 mt-5 rounded" style="display: inline-block; border-radius: 10px; padding: 0 30px;" id="error_message"></p>
+    </div>
 
     <div class="cart-list" id="cart">
         <h3 class="p-4">Cart</h3>
@@ -92,7 +94,7 @@
     </div>
 
 
-    <div class="container mt-5">
+    <div class="container mt-1">
         <div class="row alertMessage" id="all_carts">
             <div class="col-3">
                 <div class="card text-center">
